<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/firstAirport"
        android:layout_alignParentStart="true"
        android:textColor="@color/teal_700"/>

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="5dp"
        android:entries="@array/airports" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner3"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:text="@string/lastAirport"
        android:textColor="@color/teal_700"/>

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="5dp"
        android:entries="@array/airports" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner4"
        android:layout_marginTop="10dp"
        android:text="@string/firstDate"
        android:layout_marginStart="10dp"
        android:textColor="@color/teal_700"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner4"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="252dp"
        android:text="@string/lastDate"
        android:textColor="@color/teal_700" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView13"
        android:layout_marginTop="10dp"
        android:inputType="date"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView14"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="250dp"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDate"
        android:layout_marginStart="155dp"
        android:layout_marginTop="100dp"
        android:text="@string/children"
        android:textColor="@color/teal_700"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDate"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:text="@string/adults"
        android:textColor="@color/teal_700"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDate2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/babies"
        android:textColor="@color/teal_700"/>

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="number" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@+id/editTextNumber2"
        android:layout_marginTop="36dp"
        android:text="@string/search" />

</RelativeLayout>
